# project-sillyfied-installer

./: .gitignore  CMakeLists.txt  README.md  obj2exec.sh  setupdirs.sh  source2obj.sh
3rd-party-licenses/: LICENSE_CURL.txt  LICENSE_JSON.txt  LICENSE_ZLIB.txt
projsilinstaller-win/: check_steam_windows.cpp  extract_package.cpp  fetch_package.h  mod_manager.cpp  platform.h  projsilinstaller-win.cpp  projsilinstaller-win.vcxproj  projsilinstaller-win.vcxproj.filters  shared_common_functions.cpp  shared_common_functions.h  update_package.cpp  update_package.h
projsilinstaller/include/: check_steam_windows.h  extract_package.h  mod_manager.h  projsilinstaller.h  remove_enitre_game.h  vcpkg.json
projsilinstaller/src/: fetch_package.cpp  remove_entire_game.cpp
